# indigo

./: .gitignore  README.md  pyproject.toml
src/DataCapture/: capture.py  stats.py
tests/: test_capture.py  test_stats.py
